--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
-1.Implement division method.
-2.Implement multiplication method.
-3.Implement mid-square method.
-4.Implement folding method.
+1.Implement division method./
+2.Implement multiplication method./
+3.Implement mid-square method./
+4.Implement folding method./
 5.Implement linear probing.
 6.Implement quadratic probing.
 7.Implement double hashing.
